# giflib-api

./: Main.hs  README.markdown  Types.hs  giflib-api.cabal
.halcyon/: constraints
Tests/: Main.hs
