name:                giflib-api
version:             0.1.0.0
synopsis:            A stupid API
description:         A state-ful API storing links (actually strings) in acid-state
homepage:            https://github.com/passy/giflib-api
license:             Apache-2.0
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          phartig@twitter.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/passy/giflib-api.git

executable giflib-api
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base ==4.*
                     , acid-state
                     , aeson
                     , containers
                     , mtl
                     , network-uri
                     , safecopy
                     , scotty
                     , text
                     , transformers
                     , time
  default-language:    Haskell2010
  Ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                       -auto-all
                       -caf-all

Test-Suite hspec-tests
  main-is:             Tests/Main.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
                     , hspec
                     , QuickCheck
                     , acid-state
                     , aeson
                     , containers
                     , mtl
                     , network-uri
                     , safecopy
                     , scotty
                     , text
                     , transformers
                     , time
